<resources>
    <!--<string name="app_name">Test</string>-->

    <string name="text_bottom_tab_home_page">看图</string>
    <string name="text_bottom_tab_collection">收藏</string>
    <string name="text_bottom_tab_user">我</string>


    <string name="splash_slogan">Go through the every bit of life</string>
    <string name="splash_copyright">Copyright &#169; 2016 </string>
    <string name="splash_version">V %1$s</string>
    <string name="text_go_back">返回</string>
    <string name="text_sign_in">注册</string>
    <string name="text_search_hint">输入要搜索的用户名</string>
    <string name="text_title_my_collection">我的收藏</string>

    <string name="tips_login_password">密码</string>
    <string name="tips_login_phone_num">手机号</string>
    <string name="text_login">登录</string>
    <string name="tips_input_phone_num">请输入你手机号</string>
    <string name="text_login_right_now">立即登录</string>
    <string name="tips_benefit_after_login">登录后可以修改个人资料，享受收藏功能等</string>
    <string name="text_title_user">个人中心</string>

</resources>
