<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.febsky.weibosou.module.ui.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_common_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_bar_height"
        android:background="@color/app_main_color">

        <TextView
            android:id="@+id/tv_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:text="@string/text_go_back"
            android:textColor="@color/color_white"
            android:textSize="@dimen/title_bar_text_size" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:text="@string/text_sign_in"
            android:textColor="@color/color_white"
            android:textSize="@dimen/title_bar_text_size" />
    </RelativeLayout>


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_user_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:riv_corner_radius="35dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_login_username_input"
            android:hint="@string/tips_login_phone_num"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:lines="1"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/color_text_black_33"
            android:textColorHint="@color/color_text_grey_d6"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_login_username_input"
            android:hint="@string/tips_login_password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="8dp"
            android:textColor="@color/color_text_black_33"
            android:textColorHint="@color/color_text_grey_d6"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_login_btn_selector"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/text_login"
            android:textColor="@color/login_btn_color"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
